sumo/tests/traci/MoveNode/InvalidPositionFormat/testclient.prog
simstep_repeat 1 25 1 100
